# rustboy

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: cron-security-audit.yml  rust.yml  security-audit-on-push.yml
src/: cpu.rs  flags_register.rs  joypad.rs  lib.rs  main.rs  memory_bus.rs  opcodes.rs  opcodes_json.rs  registers.rs  rom.rs  utils.rs
src/cpu/: mod.rs  opcodes_json.rs  registers.rs
