[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/rustboy"
license = "MIT OR Apache-2.0"
description = "RustBoy is a GameBoy emulator written in Rust"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
