[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"
authors = ["Janusz Piechówka"]
repository = "https://github.com/jpiechowka/rustboy"
license = "MIT OR Apache-2.0"
description = "RustBoy is a GameBoy emulator written in Rust"
readme = "README.md"

[lib]
path = "src/lib.rs"
name = "rustboy"

[[bin]]
path = "src/main.rs"
name = "rb"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.20"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
